Fix file input fields to look properly aligned

--- a/apps/report/static/css/report.css
+++ b/apps/report/static/css/report.css
@@ -8,3 +8,8 @@
 .time { width: 100px; }
 .duration { width: 100px; }
 .filterexpr { width: 300px; }
+
+input[type="file"] {
+    padding-top: 5px;
+    line-height: 0;
+}
